--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,3 +21,32 @@ jobs:
           WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
           WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Announce on Discord
+        if: success()
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          TAG: ${{ github.ref_name }}
+          REPO: ${{ github.repository }}
+        run: |
+          python - << 'PY'
+          import os, json, urllib.request
+
+          webhook = os.environ["DISCORD_WEBHOOK"]
+          tag = os.environ["TAG"]
+          repo = os.environ["REPO"]
+
+          content = (
+            f"📦 **New Release Published**\n"
+            f"**{repo}** — `{tag}`\n"
+            f"https://github.com/{repo}/releases/tag/{tag}"
+          )
+
+          data = json.dumps({"content": content}).encode("utf-8")
+          req = urllib.request.Request(
+              webhook,
+              data=data,
+              headers={"Content-Type": "application/json"}
+          )
+          urllib.request.urlopen(req).read()
+          PY
