--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,20 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Generate Version.lua
+        run: |
+          TAG="${GITHUB_REF_NAME}"
+          DATE=$(date -u +"%Y-%m-%d")
+
+          cat > HomeDecor/Core/Version.lua <<EOF
+-- Auto-generated. Do not edit.
+
+HomeDecor_Version = {
+    version = "${TAG}",
+    date    = "${DATE}",
+}
+EOF
+
       - name: Package and Upload
         uses: BigWigsMods/packager@master
         env:
