--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,16 +17,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Debug - confirm workflow is running
-        run: |
-          echo "Running Release workflow for tag: ${GITHUB_REF_NAME}"
-          git --version
-
       - name: Generate Version.lua
         shell: bash
         run: |
           set -euo pipefail
-
           TAG="${GITHUB_REF_NAME}"
           DATE="$(date -u +"%Y-%m-%d")"
 
@@ -44,11 +38,9 @@ EOF
         shell: bash
         run: |
           set -euo pipefail
-
           TAG="${GITHUB_REF_NAME}"
           DATE="$(date -u +"%Y-%m-%d")"
 
-          # Use previous tag ONLY to limit commits to "this release"
           PREV_TAG="$(git describe --tags --abbrev=0 "${TAG}^" 2>/dev/null || true)"
           if [ -n "${PREV_TAG}" ]; then
             RANGE="${PREV_TAG}..${TAG}"
@@ -71,29 +63,4 @@ EOF
           } > HomeDecor/Core/Changelog.lua
 
       - name: Package and Upload
-        uses: BigWigsMods/packager@master
-        env:
-          CF_API_KEY: ${{ secrets.CF_API_KEY }}
-          WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-          WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
-          GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Announce on Discord
-        if: success()
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-          TAG: ${{ github.ref_name }}
-          REPO: ${{ github.repository }}
-        run: |
-          payload=$(cat <<EOF
-          {
-            "content": "📦 **New Release Published**\n**${REPO}** — \`${TAG}\`\nhttps://github.com/${REPO}/releases/tag/${TAG}"
-          }
-          EOF
-          )
-
-          curl -sS -X POST \
-            -H "Content-Type: application/json" \
-            -H "User-Agent: HomeDecorReleaseBot (GitHub Actions)" \
-            --data "$payload" \
-            "${DISCORD_WEBHOOK}?wait=true"
+        uses:
