--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Generate Version.lua
-        shell: bash
-        run: bash -lc 'set -euo pipefail; TAG="$GITHUB_REF_NAME"; DATE="$(date -u +%Y-%m-%d)"; mkdir -p HomeDecor/Core; printf "HomeDecor_Version = {\n  version = \"%s\",\n  date    = \"%s\",\n}\n" "$TAG" "$DATE" > HomeDecor/Core/Version.lua'
-
       - name: Generate Changelog.lua
         shell: bash
-        run: bash -lc 'set -euo pipefail; TAG="$GITHUB_REF_NAME"; DATE="$(date -u +%Y-%m-%d)"; PREV_TAG="$(git describe --tags --abbrev=0 "${TAG}^" 2>/dev/null || true)"; if [ -n "$PREV_TAG" ]; then RANGE="${PREV_TAG}..${TAG}"; else RANGE="${TAG}"; fi; mkdir -p HomeDecor/Core; CHANGES="$(git log "$RANGE" --no-merges --pretty=format:"- %s")"; printf "HomeDecor_Changelog = [[\n# HomeDecor\n\n## %s (%s)\n\n%s\n\n]]\n" "$TAG" "$DATE" "$CHANGES" > HomeDecor/Core/Changelog.lua'
+        run: bash -lc 'set -euo pipefail; TAG="$GITHUB_REF_NAME"; DATE="$(date -u +%Y-%m-%d)"; PREV_TAG="$(git describe --tags --abbrev=0 "${TAG}^" 2>/dev/null || true)"; if [ -n "$PREV_TAG" ]; then RANGE="${PREV_TAG}..${TAG}"; else RANGE="${TAG}"; fi; mkdir -p HomeDecor/Core; CHANGES="$(git log "$RANGE" --no-merges --pretty=format:"- %s")"; printf "HomeDecor_Changelog = [[\n# HomeDecor\n\n## %s (%s)\n\n%s\n\n]]\n" "$TAG" "$DATE" "$CHANGES" > HomeDecor/Core/Changelog.lua; echo "Wrote HomeDecor/Core/Changelog.lua"; ls -la HomeDecor/Core | sed -n "1,200p"'
 
       - name: Package and Upload
         uses: BigWigsMods/packager@master
